feat: support multiple scheduled sync tasks
